<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nimbuzz MUC Banbot</string>
    <string name="action_settings">Settings</string>
    <string name="about">About App</string>
    <string name="bot_info">Bot Info</string>
    <string name="botid">Bot Jid:</string>
    <string name="btn_login">Sign In</string>
    <string name="dbinfo">Nimbuzz MUC Assistant Bot</string>
    <string name="dbinfo2">Coded By DB~@NC</string>
    <string name="dbinfo3">Email: dbh4ck@gmail.com</string>
    <string name="dbinfo4">Blog: http://dbh4ck.blogspot.in</string>
    <string name="exit">Exit</string>
    <string name="hello_db">Nimbuzz MUC Assistant Bot Android Coded by db~@NC</string>
    <string name="help">Commands List</string>
    <string name="join_room">Join Chatroom</string>
    <string name="lbl_dbh4ck">Visit My Blog: http://dbh4ck.blogspot.in</string>
    <string name="lbl_dbmail">Report Bugs: dbh4ck@gmail.com</string>
    <string name="lbl_pwd">Password:</string>
    <string name="lbl_username">Username:</string>
    <string name="loggedinas">Currently Logged In As:</string>
    <string name="login">Login with your Nimbuzz Bot ID:</string>
    <string name="my_home">Home</string>
    <string name="my_prof">My Profile</string>
    <string name="ok">OK</string>
    <string name="others">Others</string>
    <string name="sign_out">Sign out</string>
    <string name="targetmsg">Your Message Here</string>
    <string name="leave">Leave</string>
    <string name="sendmessage">Send</string>
    <string name="coderdb">Coded by Db~@NC</string>
    <string name="aboutbot">Nimbuzz / XMPP MUC Admin Jabber Bot Coded in Pure Java Using Smack API 4.1.4 Full width Navigation Drawer, Swipeable Tabs, Android Full Material Design UI</string>
    <string name="botfeatures">Bot Features:</string>
    <string name="botf">kick, ban, mem, ban ip, add bot master, remove bot master, show bot masters, grant mod., admin, owner, voice, etc.</string>
    <string name="dbimg">dbimg</string>
    <string name="txt_pwd" />
    <string name="txt_username" />
    <string name="title_activity_nav__nimbuzz">Nimbuzz MUC Banbot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="botmaster">Bot Master ID:</string>
    <string name="joinlbl">Join Room</string>
    <string name="rnamelbl">Room:</string>
    <string name="botnicklbl">Bot Nick:</string>
    <string name="enterroombtnlbl">Enter</string>
    <string name="sendmsg">Send Msg</string>
    <string name="message">Your Message Here</string>
    <string name="lblsay">Version:</string>
    <string name="verdtl">Build Version 1.0.2</string>
    <string name="rverdtl">Release Version 2.0.0</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="action_search">Search</string>
    <string name="application_action_waiting">Reconnect</string>
    <string name="my_contact_list">Contacts</string>
</resources>
