<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#980a0a09">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbinfo"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbinfo4"
        android:id="@+id/textView11"
        android:textAlignment="center"
        android:textColor="#0cd735"
        android:textSize="18sp"
        android:autoLink="web"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbinfo2"
        android:id="@+id/textView9"
        android:textSize="22sp"
        android:textColor="#fd0505"
        android:textAlignment="center"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/ok"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true">
        <requestFocus/>
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbinfo3"
        android:id="@+id/textView10"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="?android:attr/colorPrimary"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

</RelativeLayout>