<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/main_content"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll"
            app:expandedTitleMarginStart="88dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginBottom="56dp"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitle"
            app:collapsedTitleTextAppearance="@style/ToolbarTitle"
            app:contentScrim="#212122">

            <FrameLayout android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="pin">

                <ImageView
                    android:fitsSystemWindows="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/side_nav_bar"/>



                <ImageView android:layout_gravity="fill"
                    android:paddingLeft="16dp" android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/most"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:paddingTop="174dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Coded By db~@NC"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textAlignment="center"
                    android:typeface="serif"
                    android:textStyle="normal|bold"
                    android:textAllCaps="false" />

            </FrameLayout>
            <android.support.v7.widget.Toolbar app:popupTheme="@style/AppTheme.PopupOverlay"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space android:layout_width="match_parent"
                android:layout_height="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:id="@+id/textView14"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <Space android:layout_width="match_parent" android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutbot"
                android:id="@+id/textView15"
                android:layout_marginTop="49dp"
                android:textSize="18sp"
                android:textColor="#2441d0"
                android:textAlignment="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView14" />


            <Space android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botfeatures"
                android:id="@+id/textView16"
                android:layout_below="@+id/textView15"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="41dp"
                android:textSize="18sp"
                android:textColor="#e74e7204"
                android:textAlignment="center" />

            <Space android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botf"
                android:id="@+id/textView17"
                android:layout_below="@+id/textView16"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

            <Space android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coderdb"
                android:id="@+id/textView18"
                android:textAlignment="center"
                android:textColor="#f84b4b"
                android:textSize="19sp"
                android:layout_below="@+id/textView21"
                android:layout_alignLeft="@+id/textView21"
                android:layout_alignStart="@+id/textView21"
                android:layout_marginTop="32dp" />


            <Space android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblsay"
                android:id="@+id/textView19"
                android:layout_marginTop="44dp"
                android:layout_below="@+id/textView17"
                android:layout_centerHorizontal="true"
                android:textColor="#e74e7204"
                android:textSize="20sp"
                android:textAlignment="center" />

            <Space android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/verdtl"
                android:id="@+id/textView20"
                android:layout_below="@+id/textView19"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <Space android:layout_width="match_parent"
                android:layout_height="16dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rverdtl"
                android:id="@+id/textView21"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_below="@+id/textView20"
                android:layout_centerHorizontal="true" />

            <Space android:layout_width="match_parent"
            android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Visit my blog:"
                android:id="@+id/textView22"
                android:autoLink="web"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_below="@+id/textView21"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="http://dbh4ck.blogspot.in"
                android:id="@+id/textView23"
                android:autoLink="web"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_below="@+id/textView22"
                android:layout_centerHorizontal="true" />


        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>


    </android.support.design.widget.CoordinatorLayout>